Add JetBrains Mono Vietnamese font file to project assets
